<resources>
    <string name="app_name">CharEditor</string>
    <string name="char_picker_title">Enter Kanji to edit</string>
    <string name="char_picker_message">Enter one Kanji char here</string>
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="draw">Draw</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="move">Move</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="zoom">Zoom</string>
    <string name="rotate">Rotate</string>
    <string name="import_from">Import</string>
    <string name="scope_char">Char</string>
    <string name="scope_stroke">Stroke</string>
    <string name="scope_glyph">Glyph</string>
    <string name="tag">Tag</string>
    <string name="login">Log In Google</string>
    <string name="login_default">Not logged in</string>
    <string name="invalid_click">Operation has no effect in current scope</string>
    <string name="dlg_tag_title">Modify tag</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save_success">Save successfully</string>
    <string name="save_failed">Save failed</string>
    <string name="list_success">Retrieved char list from server</string>
    <string name="overwrite_title">Confirm overwrite</string>
    <string name="overwrite_message">Char already staged, overwrite?</string>
    <string name="rotate_title">Rotate selected strokes</string>
    <string name="rotate_message">How many degrees? (negative to CCW)</string>
    <string name="invalid_input">Invalid input value</string>
    <string name="zoom_title">Zoom selected strokes</string>
    <string name="zoom_message">Percentage of zoom?</string>
    <string name="zoom_x">Zoom on X direction</string>
    <string name="zoom_y">Zoom on Y direction</string>
    <string name="normal_mode">NORM</string>
    <string name="delete_mode">DEL</string>
    <string name="set_delete_mode">Delete mode set to %1$s</string>
    <string name="load_which_title">Loading Character</string>
    <string name="load_which_message">Staged char found, load from staging?</string>
    <string name="delete_glyph_title">Confirm delete glyph</string>
    <string name="delete_glyph_message">Delete current glyph?</string>
    <string name="error_import_glyph">Can only import into empty glyph</string>
    <string name="tag_kai">楷</string>
    <string name="tag_xin">行</string>
    <string name="tag_cao">草</string>
    <string name="tag_yi">異</string>
    <string name="tag_zhi">日</string>
    <string name="tag_jian">簡</string>
    <string name="tag_you">優</string>
    <string name="tag_gai">改</string>
    <string name="pick_from_stage">Pick from stage</string>
    <string name="empty_stage">Stage is empty</string>
</resources>