<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/zoom_dlg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/zoom_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zoom_title"
        style="@style/MaterialAlertDialog.Material3.Title.Text"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/zoom_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zoom_message"
        style="@style/MaterialAlertDialog.Material3.Body.Text"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toBottomOf="@id/zoom_title"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/text_pct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/zoom_message" />

    <CheckBox
        android:id="@+id/zoom_chk_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zoom_x"
        android:checked="true"
        style="@style/Widget.Material3.CompoundButton.CheckBox"
        app:layout_constraintTop_toBottomOf="@id/text_pct"
        app:layout_constraintLeft_toLeftOf="parent" />

    <CheckBox
        android:id="@+id/zoom_chk_y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zoom_y"
        android:checked="true"
        style="@style/Widget.Material3.CompoundButton.CheckBox"
        app:layout_constraintTop_toBottomOf="@id/zoom_chk_x"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/zoom_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        style="@style/Widget.Material3.Button.TextButton.Dialog"
        app:layout_constraintTop_toBottomOf="@id/zoom_chk_y"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/zoom_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        style="@style/Widget.Material3.Button.TextButton.Dialog"
        app:layout_constraintTop_toBottomOf="@id/zoom_chk_y"
        app:layout_constraintRight_toLeftOf="@id/zoom_ok" />

</androidx.constraintlayout.widget.ConstraintLayout>